Fixed font on mobile devices being too small

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1489,7 +1489,7 @@ hr {
     margin-bottom: 4px;
   }
   .title-main p.anim4 {
-    font-size: 23px;
+    font-size: 21px;
   }
   /*.insta-overlay {
     height: 30px;
